name:                DepthMap
version:             0.1.0.0
synopsis:            Attempted rewrite of an OpenMP project in Haskell
description:         Please see README.md
homepage:            https://github.com/shanemikel/DepthMap#readme
copyright:           2016 Shane Pearlman
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     -- , accelerate
                     -- , cuda
                     -- , accelerate-cuda
  default-language:    Haskell2010

executable DepthMap-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  -- other-modules:       Utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , DepthMap
                     , transformers
                     , bytestring
                     -- , accelerate
                     -- , accelerate-io
                     , path
                     , binary
                     , binary-strict
                     , repa
                     , formatting
  default-language:    Haskell2010

test-suite DepthMap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , DepthMap
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shanemikel/DepthMap
